# STM32_LAB_3_Receiver

./: CMakeLists.txt  combine.py  combined_lab_code.txt  lb3_Receiver.ioc
Core/Inc/: display.h  display.hpp  display_protocol.hpp  logic.hpp  main.h  nrf24l01p.h  nrf24l01p.hpp  radio.h  radio.hpp  radio_protocol.hpp  rtos_tasks.h  stm32f4xx_it.h  ui_feedback.hpp
Core/Src/: display.cpp  dma.c  freertos.c  gpio.c  i2c.c  logic.cpp  main.c  nrf24l01p.c  nrf24l01p.cpp  radio.cpp  spi.c  ssd1306.c  stm32f4xx_it.c  tim.c  ui_feedback.c  ui_feedback.cpp
cmake/stm32cubemx/: CMakeLists.txt
